--- a/package.json
+++ b/package.json
@@ -23,18 +23,22 @@
     "abab": "^2.0.0",
     "accepts": "^1.3.5",
     "acorn": "^6.0.2",
+    "ajv": "^6.5.4",
     "axios": "^0.16.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.3",
+    "cryptiles": "^4.1.2",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
+    "hoek": "^5.0.4",
     "lodash": "^4.17.11",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.13",
     "mongoose": "^4.11.7",
     "morgan": "~1.0.0",
+    "node-macaddress": "^0.2.4",
     "node-mime": "^1.0.0",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
