--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.15.6",
     "hoek": "^5.0.4",
     "lodash": "^4.17.11",
+    "merge": "^1.2.1",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.23",
     "mongoose": "^4.11.7",
