--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^3.6.1",
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.9"
   },
   "dependencies": {
     "abab": "^2.0.0",
     "accepts": "^1.3.5",
-    "acorn": "^6.0.2",
-    "ajv": "^6.5.4",
+    "acorn": "^6.0.6",
+    "ajv": "^6.7.0",
     "axios": "^0.16.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.3",
-    "cryptiles": "^4.1.2",
+    "cryptiles": "^4.1.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "hoek": "^5.0.4",
@@ -37,8 +37,8 @@
     "merge": "^1.2.1",
     "method-override": "^3.0.0",
     "moment-timezone": "^0.5.23",
-    "mongoose": "^4.11.7",
-    "morgan": "~1.0.0",
+    "mongoose": "^4.13.18",
+    "morgan": "^1.9.1",
     "node-macaddress": "^0.2.4",
     "node-mime": "^1.0.0",
     "passport": "~0.1.17",
@@ -46,12 +46,12 @@
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "react-infinite-scroller": "^1.2.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-moment": "^0.6.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "^1.1.5",
-    "url-parse": "^1.4.3"
+    "url-parse": "^1.4.4"
   }
 }
