--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-moment": "^0.6.5",
     "react-router-dom": "^4.1.2",
     "react-scripts": "^1.1.5",
-    "url-parse": "^1.4.4"
+    "url-parse": "^1.4.4",
+    "webpack-dev-server": "^3.1.14"
   }
 }
