--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.3",
     "cryptiles": "^4.1.3",
+    "event-stream": "^4.0.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "flatmap-stream": "0.0.1-security",
     "hoek": "^5.0.4",
     "lodash": "^4.17.11",
     "merge": "^1.2.1",
