--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "connect-flash": "~0.1.1",
     "cookie-parser": "^1.4.4",
     "cryptiles": "^4.1.3",
+    "eslint": "^6.0.1",
     "event-stream": "^4.0.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
