--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "flatmap-stream": "0.0.1-security",
+    "handlebars": "^4.1.2",
     "hoek": "^6.1.3",
     "lodash": "^4.17.11",
     "merge": "^1.2.1",
